force-app/main/default/objects/Prestacion_de_reintegro__c/Prestacion_de_reintegro__c.object-meta.xml
<CustomObject>
    <label>Prestación de reintegro</label>
    <nameField>
        <displayFormat>PREINT-{0000}</displayFormat>
        <label>Nombre de Prestacion de reintegro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prestaciones de reintegros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>