force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Alerta__c.field-meta.xml
<CustomField>
    <fullName>Alerta__c</fullName>
    <label>Alerta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>SAB</fullName>
            </value>
            <value>
                <fullName>PREEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>