force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Caras__c.field-meta.xml
<CustomField>
    <fullName>Caras__c</fullName>
    <label>Caras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>