force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Prestaciones de reintegros</relationshipLabel>
    <relationshipName>Prestaciones_de_reintegros</relationshipName>
    <type>Lookup</type>
</CustomField>