force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Fecha_de_dispensa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_dispensa__c</fullName>
    <label>Fecha de dispensa</label>
    <type>Date</type>
</CustomField>