force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Fecha_de_realizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_realizacion__c</fullName>
    <label>Fecha de realizacion</label>
    <type>Date</type>
</CustomField>