force-app/main/default/objects/Prestacion_de_reintegro__c/fields/HD__c.field-meta.xml
<CustomField>
    <fullName>HD__c</fullName>
    <label>HD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>