force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Importe_a_pagar__c.field-meta.xml
<CustomField>
    <fullName>Importe_a_pagar__c</fullName>
    <label>Importe a pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>