force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Importe_Reintegro_auditor__c.field-meta.xml
<CustomField>
    <fullName>Importe_Reintegro_auditor__c</fullName>
    <label>Importe Reintegro auditor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>