force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Importe_Reintegro_sys__c.field-meta.xml
<CustomField>
    <fullName>Importe_Reintegro_sys__c</fullName>
    <label>Importe Reintegro sys</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>