force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Importe_total__c.field-meta.xml
<CustomField>
    <fullName>Importe_total__c</fullName>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>