force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Nombre_de_la_prestacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_prestacion__c</fullName>
    <formula>Prestacional__r.Nombre_prestacion__c &amp; Medicamento__r.Nombre_de_Producto__c &amp; Prestacion_odonto__r.Nombre_prestacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de la prestación</label>
    <type>Text</type>
</CustomField>