force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <type>TextArea</type>
</CustomField>