force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Pieza_dental__c.field-meta.xml
<CustomField>
    <fullName>Pieza_dental__c</fullName>
    <label>Pieza dental</label>
    <length>255</length>
    <type>Text</type>
</CustomField>