force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Prestacion_de_reintegro__c.field-meta.xml
<CustomField>
    <fullName>Prestacion_de_reintegro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestación de reintegro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Prestacion__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Practicas odontologicas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prestacion__c</referenceTo>
    <relationshipLabel>Prestaciones de reintegros (Prestación de reintegro)</relationshipLabel>
    <relationshipName>Prestacionesodont_de_reintegros</relationshipName>
    <type>Lookup</type>
</CustomField>