force-app/main/default/objects/Prestacion_de_reintegro__c/fields/Prestacion_odonto__c.field-meta.xml
<CustomField>
    <fullName>Prestacion_odonto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestacion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Nomenclador_de_Prestacion__c.Descripcion_tipo_nomenclador__c</field>
            <operation>contains</operation>
            <value>ODONTOLOGICAS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Nomenclador_de_Prestacion__c</referenceTo>
    <relationshipLabel>Prestaciones de reintegros (Prestacion)</relationshipLabel>
    <relationshipName>Prestaciones_de_reintegros1</relationshipName>
    <type>Lookup</type>
</CustomField>