force-app/main/default/objects/Prestacion_de_reintegro__c/recordTypes/Medicamento.recordType-meta.xml
<RecordType>
    <fullName>Medicamento</fullName>
    <active>true</active>
    <label>Medicamento</label>
</RecordType>