force-app/main/default/objects/Prestacion_de_reintegro__c/recordTypes/Odontologica.recordType-meta.xml
<RecordType>
    <fullName>Odontologica</fullName>
    <active>true</active>
    <label>Odontologica</label>
</RecordType>