force-app/main/default/objects/Prestacion_de_reintegro__c/recordTypes/Prestacional.recordType-meta.xml
<RecordType>
    <fullName>Prestacional</fullName>
    <active>true</active>
    <label>Prestacional</label>
</RecordType>