force-app/main/default/objects/Prestacion_de_reintegro__c/validationRules/Validacion_para_creacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_para_creacion</fullName>
    <active>true</active>
    <description>Validacion que al momento de crear una prestacion, el tipo de registro sea mismo del valor del campo tipo__c del reintegro asociado: ejemplo: Reintegro de tipo odontologico prestacion de reintegro debera ser odontologico</description>
    <errorConditionFormula>OR(
				AND(
         RecordType.Name = &quot;Prestacional&quot;,
								OR(
				       ISPICKVAL(Caso__r.Type,&quot;Odontologico&quot;),
								   ISPICKVAL(Caso__r.Type,&quot;Medicamento&quot;)
												)
								),
   	AND(
         RecordType.Name = &quot;Odontologica&quot;,
								OR(
				       ISPICKVAL(Caso__r.Type,&quot;Presacion&quot;),
								   ISPICKVAL(Caso__r.Type,&quot;Medicamento&quot;)
												)
								),
					AND(
         RecordType.Name = &quot;Medicamento&quot;,
								OR(
				       ISPICKVAL(Caso__r.Type,&quot;Odontologico&quot;),
								   ISPICKVAL(Caso__r.Type,&quot;PRestacion&quot;)
												)
								)
				)</errorConditionFormula>
    <errorMessage>El tipo de prestación debe coincidir con el tipo de reintegro</errorMessage>
</ValidationRule>